--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 								<h3>Social</h3>
 								<ul class="icons alt">
 				
-									<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
+									<li><a href="https://www.linkedin.com/in/calvin-t-320592167/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
 									<li><a href="https://github.com/CalvinTurner06" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
